bridge/base/0-yahtzee-namespace.yaml
#! 0-yahtzee-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: yahtzee
    labels:
        project: yahtzee
