bridge/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: yahtzee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend # Le sélecteur du Deployment
  template:
    metadata:
      labels:
        app: backend # LE LABEL PHYSIQUE DU POD (Très important)
    spec:
      containers:
      - name: yhtz-backend
        image: samyeuh/yhtz-backend:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
