bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: yahtzee
    labels:
        com.docker.compose.project: yahtzee
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: yahtzee
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: yahtzee
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: yhtz-frontend
                  image: samyeuh/yhtz-frontend:latest
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
