bridge/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: yahtzee
spec:
  selector:
    app: frontend # <-- Doit être identique au label du dessus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
